plugins {
    id 'test-report-aggregation'
    id 'idea'
    id 'org.sonarqube' version '7.2.2.6593'
    id "org.owasp.dependencycheck" version "12.1.9"
    id 'jacoco'
    id 'org.cyclonedx.bom' version '3.1.0'
}

ext {
    intygClinicalprocessSchemasVersion = "1.1.0.1"
    rivtaStoreLogSchemasVersion = "2.0.1.3"
    schemasContractVersion = "2.2.0.1"
    schemasSupportVersion = "2.2.0.1"
    srsSchemasVersion = "1.0.0.1"

    commonsIoVersion = "2.21.0"
    cxfVersion = "4.1.4"
    guavaVersion = '33.5.0-jre'
    saxonVersion = "12.9"
    shedlockSpringVersion = "6.10.0"
    uapVersion = "1.6.1"
    xmlSecVersion = "4.0.4"

    springbootMavenBomVersion = "3.5.10"

    nvdMirror = 'https://vulnz-nvd-mirror-devtest.intyg.nordicmedtest.se'
}

allprojects {
    apply plugin: 'maven-publish'
    apply plugin: 'java'
    apply plugin: 'jacoco'

    group = 'se.inera.intyg.infra'
    version = System.properties['buildVersion'] ?: '4.1.0-SNAPSHOT'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    dependencies {
        implementation platform("org.springframework.boot:spring-boot-dependencies:${springbootMavenBomVersion}")
        annotationProcessor platform("org.springframework.boot:spring-boot-dependencies:${springbootMavenBomVersion}")
        testAnnotationProcessor platform("org.springframework.boot:spring-boot-dependencies:${springbootMavenBomVersion}")
        testFixtures platform("org.springframework.boot:spring-boot-dependencies:${springbootMavenBomVersion}")

        implementation "ch.qos.logback:logback-classic"
        implementation "jakarta.annotation:jakarta.annotation-api"
        implementation "jakarta.xml.ws:jakarta.xml.ws-api"

        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'

        testImplementation "org.glassfish.jaxb:jaxb-runtime"
        testImplementation "org.junit.jupiter:junit-jupiter-api"
        testImplementation "org.junit.jupiter:junit-jupiter-params"
        testImplementation "org.mockito:mockito-core"
        testImplementation "org.mockito:mockito-junit-jupiter"
        testImplementation "org.springframework:spring-test"

        testCompileOnly "org.projectlombok:lombok"
        testAnnotationProcessor "org.projectlombok:lombok"
        testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine"
    }

    tasks.register("install") {
        description("Publishes artifact to local maven repository.")
        dependsOn(publishToMavenLocal)
    }

    compileJava {
        compileJava.options.encoding = 'UTF-8'
        options.compilerArgs.add("-parameters")
    }

    jar.duplicatesStrategy = DuplicatesStrategy.EXCLUDE

    repositories {
        mavenLocal()
        maven { url "https://nexus.drift.inera.se/repository/it-public/" }
        mavenCentral {
            content {
                excludeGroupByRegex "se\\.inera.*"
            }
        }
    }

    publishing {
        publications {
            maven(MavenPublication) {
                from components.java
            }
        }
        repositories.maven {
            url = uri("https://nexus.drift.inera.se/repository/maven-releases/")
            credentials {
                username = System.properties['ineraNexusUsername']
                password = System.properties['ineraNexusPassword']
            }
        }
    }

    jacocoTestReport {
        dependsOn test

        reports {
            xml.required = true
            html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
        }

        afterEvaluate {
            classDirectories.setFrom(files(classDirectories.files.collect {
                fileTree(dir: it, exclude: [
                        "**/testability/**",
                        "**/integrationtest/**"
                ])
            }))
        }
    }
}

sonar {
    properties {
        property "sonar.projectKey", "intyg-infra"
        property "sonar.projectName", "intyg-infra"
        property "sonar.dependencyCheck.jsonReportPath", "${layout.buildDirectory.get()}/reports/dependency-check-report.json" as String
        property "sonar.dependencyCheck.htmlReportPath", "${layout.buildDirectory.get()}/reports/dependency-check-report.html" as String
    }
}

dependencyCheck {
    formats = ['HTML', 'JSON']
    nvd.setDatafeedUrl(nvdMirror)
    analyzers.setAssemblyEnabled(false)
    analyzers.setCentralEnabled(false)
    analyzers.ossIndex.setUsername(project.properties.get('ossIndexUsername') as String)
    analyzers.ossIndex.setPassword(project.properties.get('ossIndexPassword') as String)
}

reporting {
    subprojects.collect { subproject -> subproject.name }.each { subprojectName ->
        dependencies { testReportAggregation project(":${subprojectName}") }
    }
}